2017-08-11  Siddhesh Poyarekar  <siddhesh@sourceware.org>

	* benchtests/bench-memmove-large.c: Print output in JSON
	format.
	* benchtests/bench-memmove.c: Likewise.

	* benchtests/bench-memccpy.c (do_one_test): Remove checks.
	* benchtests/bench-memchr.c (do_one_test): Likewise.
	* benchtests/bench-memcpy-large.c (do_one_test): Likewise.
	* benchtests/bench-memcpy.c (do_one_test): Likewise.
	* benchtests/bench-memmove-large.c (do_one_test): Likewise.
	* benchtests/bench-memmove.c (do_one_test): Likewise.
	* benchtests/bench-memset-large.c (do_one_test): Likewise.
	* benchtests/bench-memset.c (do_one_test): Likewise.
	* benchtests/bench-string.h (test_init): Remove memsets.

2017-08-10  Rical Jasan  <ricaljasan@pacific.net>

	* manual/lang.texi
	(Computing the Width of an Integer Data Type): Rename section to
	"Width of an Integer Type".  Remove inaccurate statement regarding
	lack of C language facilities for determining width of integer
	types, and reorder content to improve flow and context of
	discussion.

2017-08-10  Rical Jasan  <ricaljasan@pacific.net>

	* lang.texi (va_copy): Change standard from ISO to C99.
	(__va_copy): Add standard and header annotation.
	Update description for clarity of origins and current use.

2017-08-10  Gabriel F. T. Gomes  <gftg@linux.vnet.ibm.com>

	[BZ #21941]
	* sysdeps/powerpc/fpu/math_private.h (__ieee754_sqrtf128): Since
	xssqrtqp requires operands to be in Vector Registers
	(Altivec/VMX), replace the register constraint 'wq' with 'v'.
	* sysdeps/powerpc/powerpc64le/power9/fpu/e_sqrtf128.c
	(__ieee754_sqrtf128): Likewise.

2017-08-10  Wilco Dijkstra  <wdijkstr@arm.com>

	* sysdeps/aarch64/memcmp.S (memcmp):
	Rewrite of optimized memcmp.

2017-08-10  Florian Weimer  <fweimer@redhat.com>

	Introduce ld.so exceptions.
	* sysdeps/generic/ldsodefs.h (struct dl_exception): Define.
	(_dl_exception_create, _dl_exception_create_format)
	(_dl_exception_free, _dl_signal_exception, _dl_signal_cexception)